--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "node": "^16.17.1",
     "npm": "*"
   },
+  "bin": {
+    "knockknocknode": "./index.js"
+  },
   "scripts": {
     "start": "node index",
     "test": "jest"
